# wasm-playground

./: .gitignore  LICENSE  README.md
composed/: .gitignore  Cargo.toml  Dockerfile.app  README.md  build.sh  composed.yaml
composed/crates/books-api-dep/: Cargo.toml
composed/crates/books-api-dep/src/: lib.rs
composed/crates/books-api-dep/wit/: authors.wit  books.wit  world.wit
composed/crates/cmd/: Cargo.toml  rust-toolchain.toml
composed/crates/cmd/src/: main.rs
composed/crates/cmd/wit/: world.wit
composed/crates/db-dep/: Cargo.toml
composed/crates/db-dep/src/: lib.rs
composed/crates/db-dep/wit/: world.wit
k3d/: Dockerfile  README.md  cs-wasi-console.yaml  deployment-spin.yaml  deployment-wasmtime.yaml  k3d.md  runtime-class.yaml  rust-hello.yaml  wasmtime-conf.txt
src/WasiConsole/: Dockerfile.spin  Program.cs  README.md  spin.toml
src/cs-hello/: Dockerfile  Program.cs  README.md  cs-hello.csproj
src/rs-hello/: Cargo.toml  Dockerfile  README.md
src/wasm-text-format/: README.md  add.wat  gcd-wasmtime.cwasm
src/wasm-text-format/add-display/: Cargo.toml
src/wasm-text-format/add-display/src/: add-display.wat  main.rs
