[package]
name = "books-api-dep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:books-api-dep"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"component:db-dep" = { path = "../db-dep/wit" }
