[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:cmd"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"component:books-api-dep" = { path = "../books-api-dep/wit" }
"component:db-dep" = { path = "../db-dep/wit" } # seems like you need to target child deps also for build to work